--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-vue": "0.2.13",
+    "aws-amplify": "3.0.23",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
